Fix user detail view

--- a/templates/user_detail.html
+++ b/templates/user_detail.html
@@ -1,7 +1,7 @@
 {% extends 'home.html' %}
 
 {% block more_content %}
-<h1>{{ object.name }}</h1>
+<h1 class="mt-5">{{ object.username }}</h1>
 <p>{{ object.city }}, {{ object.state }}</p>
 <p><a href="{% url 'messaging:conversation' %}">Message</a></p>
 <p>Email: {{object }}</p>
