fix some templates

--- a/templates/messaging/message_list.html
+++ b/templates/messaging/message_list.html
@@ -1,7 +1,7 @@
 {% extends "home.html" %}
 
-{% block content %}
-<div class="d-flex justify-content-between mb-3">
+{% block more_content %}
+<div class="d-flex justify-content-between mb-3 mt-5">
   <h2>Conversation with {{ other_user.username }}</h2>
   <a href="{% url 'messaging:conversation' %}" class="btn btn-secondary">Back to All Messages</a>
 </div>
@@ -29,4 +29,4 @@
   </div>
   <button type="submit" class="btn btn-primary">Send Message</button>
 </form>
-{% endblock content %}
+{% endblock more_content %}
