--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
     {% if user.is_authenticated %}
         <nav class="navbar navbar-expand-lg navbar-dark bg-secondary fixed-top">
             <div class="container">
-                <a class="navbar-brand fw-bold text-warning fs-3" href="#">JEDA</a>
+                <a class="navbar-brand fw-bold text-warning fs-3" href="{% url 'user_list' %}">JEDA</a>
                 <div class="ms-auto d-flex align-items-center">
                     <span class="me-3 text-light fw-semibold">Welcome, {{ user.username }}! 🎉</span>
                     <a href="{% url 'mentor_config' %}" class="btn btn-primary">
