--- a/templates/mentorship/mentor_config.html
+++ b/templates/mentorship/mentor_config.html
@@ -55,7 +55,7 @@
                     </div>
                 </div>
                 <div class="card-footer text-center">
-                    <a href="#" class="btn btn-primary">Edit Profile</a>
+                    <a href="{% url 'profile_edit' %}" class="btn btn-primary">Edit Profile</a>
                 </div>
             </div>
         </div>
