Removed image from landing page aka home.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -34,7 +34,7 @@
                     <!-- Logo Section -->
                     <div class="logo-container flex-grow-1 text-center text-md-start">
                         <h1 class="fw-bold display-3 text-warning">JEDA</h1>
-                        <img src="logo.png" alt="Logo">
+                        <!--<img src="logo.png" alt="Logo">-->
                         <p class="fs-5 text-secondary">Stay connected with style.</p>
                     </div>
                     
